--- a/Main/Pages/Home/home.html
+++ b/Main/Pages/Home/home.html
@@ -56,7 +56,7 @@
 <body>
 
 <div class="center">
-  <img src="http://www.megabytten.org/Main/Pages/Home/imgs/MegaByttenProductions.png" alt="MegaByttenProductions"> </img>
+  <img src="MegaByttenProductions.png" alt="MegaByttenProductions"> </img>
   <!-- <script src="js/scripts.js"></script> -->
   <h1 text-align='center'>MegaBytten.org</h1>
   <br>
