eutrc page changes

--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -56,11 +56,11 @@
 <body>
 
 <div class="center">
-  <img src="./mbproductions.png" alt="MegaByttenProductions"> </img>
+  <img src="/main/mbproductions.png" alt="MegaByttenProductions">
   <!-- <script src="js/scripts.js"></script> -->
   <h1 text-align='center'>MegaBytten.org</h1>
   <br>
-  <h2>EUTRC App/h2>
+  <h2>EUTRC App</h2>
   <br>
   <div class="topnav">
     <a class="active" href="home">Home</a>
@@ -71,7 +71,7 @@
   <hr>
 </div>
 
-<div>
+<div class='center'>
   <h3>EUTRC App Verification</h3>
   <hr>
   <form onsubmit="return checkEmail(event)" action="http://megabytten.org/eutrcapp/verification" method='post'>
