--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -56,15 +56,15 @@
 <body>
 
 <div class="center">
-  <img src="/main/mbproductions.png" alt="MegaByttenProductions">
+  <img src="\main\mbproductions.png" alt="MegaByttenProductions">
   <!-- <script src="js/scripts.js"></script> -->
   <h1 text-align='center'>MegaBytten.org</h1>
   <br>
   <h2>EUTRC App</h2>
   <br>
   <div class="topnav">
-    <a class="active" href="home">Home</a>
-    <a href="eutrcapp">EUTRC App</a>
+    <a href="home">Home</a>
+    <a class="active" href="eutrcapp">EUTRC App</a>
     <a href="minecraft">Minecraft Projects</a>
     <a href="about">About</a>
   </div>
