img attempt #54 (back to '/main/'

--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -56,7 +56,7 @@
 <body>
 
 <div class="center">
-  <img src="../main/mbproductions.png" alt="MegaByttenProductions">
+  <img src="/main/mbproductions.png" alt="MegaByttenProductions">
   <!-- <script src="js/scripts.js"></script> -->
   <h1 text-align='center'>MegaBytten.org</h1>
   <br>
