--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -84,7 +84,7 @@
 
 <script type="text/javascript">
   function checkEmail(e){
-    e.preventDefault()
+    //e.preventDefault()
     var emailAddress = document.getElementById('emailInput')
     if (!emailAddress.includes('@exeter.ac.uk')){
       alert("Email must be verified @exeter.ac.uk address!");
