MBprod Banner functional!!! :party

--- a/Main/home.html
+++ b/Main/home.html
@@ -56,7 +56,7 @@
 <body>
 
 <div class="center">
-  <img src="./mbproductions.png" alt="MegaByttenProductions"> </img>
+  <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
   <!-- <script src="js/scripts.js"></script> -->
   <h1 text-align='center'>MegaBytten.org</h1>
   <br>
