--- a/Main/home.html
+++ b/Main/home.html
@@ -58,10 +58,7 @@
 <div class="center">
   <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
   <!-- <script src="js/scripts.js"></script> -->
-  <h1 text-align='center'>MegaBytten.org</h1>
-  <br>
-  <h2>Home page</h2>
-  <br>
+  <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
   <div class="topnav">
     <a class="active" href="home">Home</a>
     <a href="eutrcapp">EUTRC App</a>
@@ -69,6 +66,8 @@
     <a href="about">About</a>
   </div>
   <hr>
+  <h2>Home</h2>
+  <br>
 </div>
 
 
