--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -73,7 +73,8 @@
 <div class='center'>
   <h3>EUTRC App Verification</h3>
   <hr>
-  <form onsubmit="return checkEmail(event)" action="http://megabytten.org/eutrcapp/verification" method='post'>
+  /*action="http://megabytten.org/eutrcapp/verification" method='post'/*
+  <form onsubmit="return checkEmail(event)" >
     <input type="email" name="EUTRCApp Verify" placeholder="@exeter.ac.uk" id="emailInput" required>
     <input type="submit" value="Verify Email" />
   </form>
