--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -74,7 +74,7 @@
   <h3>EUTRC App Verification</h3>
   <hr>
   <form onsubmit="return checkEmail(event)" method='post' action="/eutrcapp/verification">
-    <input type="email" name="EUTRCApp Verify" placeholder="@exeter.ac.uk" id="emailInput" required>
+    <input type="email" name="email" placeholder="@exeter.ac.uk" id="email" required>
     <input type="submit" value="Verify Email" />
   </form>
 </div>
