Functioning Verification-success

--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Megabytten.org home</title>
+  <title>MB EUTRC/Home</title>
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
   <!-- This style section below defines CSS laws for HTML elements in document -->
