--- a/EUTRCApp/verification-success.html
+++ b/EUTRCApp/verification-success.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Megabytten.org</title>
+  <title>MB EUTRCApp/Verification</title>
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
   <!-- This style section below defines CSS laws for HTML elements in document -->
@@ -56,23 +56,17 @@
 <body>
 
 <div class="center">
-  <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
+  <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions">
   <!-- <script src="js/scripts.js"></script> -->
-  <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
+  <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
   <div class="topnav">
-    <a class="active" href="home">Home</a>
+    <a href="home">Home</a>
     <a href="eutrcapp">EUTRC App</a>
     <a href="minecraft">Minecraft Projects</a>
     <a href="about">About</a>
   </div>
   <hr>
-  <h2>Home</h2>
+  <h2>Verification</h2>
   <br>
+  <p> received with thanks! go back to <a href='megabytten.org/home'>home</a>
 </div>
-
-
-
-
-</body>
-
-</html>
