--- a/EUTRCApp/verification-success.html
+++ b/EUTRCApp/verification-success.html
@@ -68,5 +68,5 @@
   <hr>
   <h2>Verification</h2>
   <br>
-  <p> received with thanks! go back to <a href='megabytten.org/home'>home</a>
+  <p> received with thanks! go back to <a href='./'>home</a>
 </div>
