--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -60,10 +60,10 @@
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
   <div class="topnav">
-    <a href="home">Home</a>
+    <a href="./home">Home</a>
     <a class="active" href="eutrcapp">EUTRC App</a>
-    <a href="minecraft">Minecraft Projects</a>
-    <a href="about">About</a>
+    <a href="./minecraft">Minecraft Projects</a>
+    <a href="./about">About</a>
   </div>
   <hr>
   <h2>EUTRC App</h2>
@@ -75,6 +75,7 @@
   <hr>
   <form onsubmit="return checkEmail(event)" method='post' action="/eutrcapp/verification">
     <input type="email" name="email" placeholder="@exeter.ac.uk" id="email" required>
+    <input type='password' name='password' placeholder="******" id="password" required>
     <input type="submit" value="Verify Email" />
   </form>
 </div>
