--- a/EUTRCApp/verification-failure.html
+++ b/EUTRCApp/verification-failure.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MB Email Sent!</title>
+  <title>MB Failed!</title>
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
   <!-- This style section below defines CSS laws for HTML elements in document -->
@@ -66,7 +66,10 @@
     <a href="./about">About</a>
   </div>
   <hr>
-  <h2>Success!</h2>
+  <h2>Whoops!</h2>
   <br>
-  <p>Verification Email Sent! Go back to <a href='./'>home</a>?
+  <p>Email Address or Password Incorrect! Please <a href='./eutrcapp'>Go Back</a> and try again.
+  <br>
+  <h5>Warning:
+  <p>Ensure you have registered your email and password on the EUTRCApp before attempting a verification email!
 </div>
