--- a/EUTRCApp/verification-success.html
+++ b/EUTRCApp/verification-success.html
@@ -60,7 +60,7 @@
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
   <div class="topnav">
-    <a href="./home">Home</a>
+    <a href="./">Home</a>
     <a href="./eutrcapp">EUTRC App</a>
     <a href="./minecraft">Minecraft Projects</a>
     <a href="./about">About</a>
