--- a/EUTRCApp/verification-success.html
+++ b/EUTRCApp/verification-success.html
@@ -60,13 +60,13 @@
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
   <div class="topnav">
-    <a href="./">Home</a>
-    <a href="./eutrcapp">EUTRC App</a>
-    <a href="./minecraft">Minecraft Projects</a>
-    <a href="./about">About</a>
+    <a href="/">Home</a>
+    <a href="/eutrcapp">EUTRC App</a>
+    <a href="/minecraft">Minecraft Projects</a>
+    <a href="/about">About</a>
   </div>
   <hr>
   <h2>Success!</h2>
   <br>
-  <p>Verification Email Sent! Go back to <a href='./'>home</a>?
+  <p>Verification Email Sent! Go back to <a href='/'>home</a>?
 </div>
