--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -60,10 +60,10 @@
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
   <div class="topnav">
-    <a href="./home">Home</a>
+    <a href="/home">Home</a>
     <a class="active" href="eutrcapp">EUTRC App</a>
-    <a href="./minecraft">Minecraft Projects</a>
-    <a href="./about">About</a>
+    <a href="/minecraft">Minecraft Projects</a>
+    <a href="/about">About</a>
   </div>
   <hr>
   <h2>EUTRC App</h2>
