--- a/EUTRCApp/verification-failure.html
+++ b/EUTRCApp/verification-failure.html
@@ -60,15 +60,15 @@
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
   <div class="topnav">
-    <a href="./home">Home</a>
-    <a href="./eutrcapp">EUTRC App</a>
-    <a href="./minecraft">Minecraft Projects</a>
-    <a href="./about">About</a>
+    <a href="/home">Home</a>
+    <a href="/eutrcapp">EUTRC App</a>
+    <a href="/minecraft">Minecraft Projects</a>
+    <a href="/about">About</a>
   </div>
   <hr>
   <h2>Whoops!</h2>
   <br>
-  <p>Email Address or Password Incorrect! Please <a href='./eutrcapp'>Go Back</a> and try again.
+  <p>Email Address or Password Incorrect! Please <a href='/eutrcapp'>Go Back</a> and try again.
   <br>
   <h5>Warning:
   <p>Ensure you have registered your email and password on the EUTRCApp before attempting a verification email!
