--- a/Main/home.html
+++ b/Main/home.html
@@ -53,7 +53,7 @@
 
 </head>
 
-<body style="background-color:#151B5A">
+<body style="background-color:#000000">
 
 <div class="center">
   <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
