--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -40,7 +40,7 @@
 
     /* Add a color to the active/current link */
     .topnav a.active {
-      background-color: #04AA6D;
+      background-color: #0a04f1;
       color: white;
     }
 
