Html update: white font

--- a/Main/home.html
+++ b/Main/home.html
@@ -53,23 +53,23 @@
 
 </head>
 
-<body style="background-color:#000000">
+<body style="background-color:#000000" style="color:white">
 
 <div class="center">
   <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
-  <div class="topnav">
-    <a class="active" href="home">Home</a>
-    <a href="eutrcapp">EUTRC App</a>
-    <a href="minecraft">Minecraft Projects</a>
-    <a href="about">About</a>
-  </div>
+
   <hr>
-  <h2>Home</h2>
+  <h1>Home</h1>
   <br>
 </div>
-
+<div class="topnav">
+  <a class="active" href="home">Home</a>
+  <a href="eutrcapp">EUTRC App</a>
+  <a href="minecraft">Minecraft Projects</a>
+  <a href="about">About</a>
+</div>
 
 
 
