html update, font color=white

--- a/Main/home.html
+++ b/Main/home.html
@@ -53,7 +53,7 @@
 
 </head>
 
-<body style="background-color:#000000" style="color:white">
+<body style="background-color:#000000">
 
 <div class="center">
   <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
@@ -61,7 +61,7 @@
   <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
 
   <hr>
-  <h1>Home</h1>
+  <h1><font color="white">Home</h1>
   <br>
 </div>
 <div class="topnav">
