--- a/Main/home.html
+++ b/Main/home.html
@@ -55,20 +55,24 @@
 
 <body style="background-color:#000000">
 
-<div class="center">
+<header class="center">
   <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
 
   <hr>
   <h1><font color="white">Home</h1>
-  <br>
-</div>
-<div class="topnav">
+</header>
+
+<nav class="topnav">
   <a class="active" href="home">Home</a>
   <a href="eutrcapp">EUTRC App</a>
   <a href="minecraft">Minecraft Projects</a>
-  <a href="about">About</a>
+  <a href="contact">Contact</a>
+</nav>
+
+<div style="background-color:#1B1B1B">
+
 </div>
 
 
