--- a/Main/home.html
+++ b/Main/home.html
@@ -60,23 +60,53 @@
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
 
-  <hr>
-  <h1><font color="white">Home</h1>
+  <hr> <h1><font color="white">Home</h1> <hr>
 </header>
 
-<nav class="topnav">
+<nav id="nav" class="topnav">
   <a class="active" href="home">Home</a>
   <a href="eutrcapp">EUTRC App</a>
   <a href="minecraft">Minecraft Projects</a>
-  <a href="contact">Contact</a>
+  <a href="shortcut">Shortcut</a>
 </nav>
 
+<font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div style="background-color:#1B1B1B">
 
+  <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
+     <strong><h2>MegaBytten</h2></strong>
+  </div>
+  <div style="width: 80%; float:right"> <!-- RIGHT CONTENT -->
+    Welcome to Megabytten: Evolving Tech Projects
+  </div>
+</div>
+<!-- RIGHT CONTENT This website and username refers to <b>Ethan de Villiers</b>.-->
+<hr><br>
+<div style="background-color:#1B1B1B">
+  <div style="width: 80%; float:left"> <!-- LEFT CONTENT -->
+     Megabytten is constantly developing more and more complex tech solutions.
+     From enjoyable Minecraft Mods, to Mobile Games, to Bioinformatician-targetted automation programs,
+     we ultimately strive to revolutionise the field of medicine for researchers. One script at a time.
+     <br><br>To view our projects, use the <a style="color:#00FFF9" id="nav">navigation bar</a> at the top.
+     All of our software is open source and available for viewing on <a style="color:#00FFF9" href="https://github.com/MegaBytten">github</a>.
+  </div>
+  <div style="width: 20%; float:right"> <!-- RIGHT CONTENT -->
+    <strong><h2>About</h2></strong>
+  </div>
 </div>
 
+<hr><br>
+<div style="background-color:#1B1B1B">
+  <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
+     <strong><h2>Contact Us</h2></strong>
+  </div>
+  <div style="width: 80%; float:right"> <!-- RIGHT CONTENT -->
+    Feel free to contact us for any reason, we won't bite!
+    <br><a href = "mailto: omegabytten@gmail.com">Omegabytten@gmail.com</a>
+  </div>
+</div>
 
-
+</font>
 </body>
 
 </html>
