margins and colour in style

--- a/Main/home.html
+++ b/Main/home.html
@@ -45,8 +45,15 @@
     }
 
     img {
-    max-width: 100%;
-    max-height: 100%;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    div {
+      background-color: #1B1B1B;
+      margin-top: 100px;
+      margin-left: auto;
+      margin-right: auto;
     }
 
   </style>
@@ -71,7 +78,7 @@
 </nav>
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
-<div style="background-color:#1B1B1B">
+<div>
 
   <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
@@ -82,12 +89,12 @@
 </div>
 <!-- RIGHT CONTENT This website and username refers to <b>Ethan de Villiers</b>.-->
 <hr><br>
-<div style="background-color:#1B1B1B">
+<div>
   <div style="width: 80%; float:left"> <!-- LEFT CONTENT -->
      Megabytten is constantly developing more and more complex tech solutions.
      From enjoyable Minecraft Mods, to Mobile Games, to Bioinformatician-targetted automation programs,
      we ultimately strive to revolutionise the field of medicine for researchers. One script at a time.
-     <br><br>To view our projects, use the <a style="color:#00FFF9" id="nav">navigation bar</a> at the top.
+     <br><br>To view our projects, use the <a style="color:#00FFF9" href="nav">navigation bar</a> at the top.
      All of our software is open source and available for viewing on <a style="color:#00FFF9" href="https://github.com/MegaBytten">github</a>.
   </div>
   <div style="width: 20%; float:right"> <!-- RIGHT CONTENT -->
@@ -96,7 +103,7 @@
 </div>
 
 <hr><br>
-<div style="background-color:#1B1B1B">
+<div>
   <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
      <strong><h2>Contact Us</h2></strong>
   </div>
