--- a/Main/home.html
+++ b/Main/home.html
@@ -51,6 +51,7 @@
 
     div {
       background-color: #1B1B1B;
+      height: 200;
       margin-top: 100px;
       margin-left: auto;
       margin-right: auto;
@@ -79,7 +80,6 @@
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div>
-
   <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
@@ -88,6 +88,8 @@
   </div>
 </div>
 <!-- RIGHT CONTENT This website and username refers to <b>Ethan de Villiers</b>.-->
+
+
 <hr><br>
 <div>
   <div style="width: 80%; float:left"> <!-- LEFT CONTENT -->
@@ -101,6 +103,8 @@
     <strong><h2>About</h2></strong>
   </div>
 </div>
+
+
 
 <hr><br>
 <div>
