--- a/Main/home.html
+++ b/Main/home.html
@@ -49,7 +49,7 @@
       max-height: 100%;
     }
 
-    div {
+    .content {
       background-color: #1B1B1B;
       height: 200;
       margin-top: 100px;
@@ -79,7 +79,7 @@
 </nav>
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
-<div>
+<div class="content">
   <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
@@ -91,7 +91,7 @@
 
 
 <hr><br>
-<div>
+<div class="content">
   <div style="width: 80%; float:left"> <!-- LEFT CONTENT -->
      Megabytten is constantly developing more and more complex tech solutions.
      From enjoyable Minecraft Mods, to Mobile Games, to Bioinformatician-targetted automation programs,
@@ -107,7 +107,7 @@
 
 
 <hr><br>
-<div>
+<div class="content">
   <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
      <strong><h2>Contact Us</h2></strong>
   </div>
