--- a/Main/home.html
+++ b/Main/home.html
@@ -79,7 +79,7 @@
 </nav>
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
-<div class="content">
+<div class="center content">
   <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
@@ -90,8 +90,7 @@
 <!-- RIGHT CONTENT This website and username refers to <b>Ethan de Villiers</b>.-->
 
 
-<hr><br>
-<div class="content">
+<div class="center content">
   <div style="width: 80%; float:left"> <!-- LEFT CONTENT -->
      Megabytten is constantly developing more and more complex tech solutions.
      From enjoyable Minecraft Mods, to Mobile Games, to Bioinformatician-targetted automation programs,
@@ -106,8 +105,7 @@
 
 
 
-<hr><br>
-<div class="content">
+<div class="center content">
   <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
      <strong><h2>Contact Us</h2></strong>
   </div>
