--- a/Main/home.html
+++ b/Main/home.html
@@ -80,10 +80,10 @@
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div class="center content">
-  <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
+  <div style="width: 20%; float:left" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
-  <div style="width: 80%; float:right"> <!-- RIGHT CONTENT -->
+  <div style="width: 80%; float:right" class="content"> <!-- RIGHT CONTENT -->
     Welcome to Megabytten: Evolving Tech Projects
   </div>
 </div>
@@ -91,14 +91,14 @@
 
 
 <div class="center content">
-  <div style="width: 80%; float:left"> <!-- LEFT CONTENT -->
+  <div style="width: 80%; float:left" class="content"> <!-- LEFT CONTENT -->
      Megabytten is constantly developing more and more complex tech solutions.
      From enjoyable Minecraft Mods, to Mobile Games, to Bioinformatician-targetted automation programs,
      we ultimately strive to revolutionise the field of medicine for researchers. One script at a time.
      <br><br>To view our projects, use the <a style="color:#00FFF9" href="nav">navigation bar</a> at the top.
      All of our software is open source and available for viewing on <a style="color:#00FFF9" href="https://github.com/MegaBytten">github</a>.
   </div>
-  <div style="width: 20%; float:right"> <!-- RIGHT CONTENT -->
+  <div style="width: 20%; float:right" class="content"> <!-- RIGHT CONTENT -->
     <strong><h2>About</h2></strong>
   </div>
 </div>
@@ -106,10 +106,10 @@
 
 
 <div class="center content">
-  <div style="width: 20%; float:left"> <!-- LEFT CONTENT -->
+  <div style="width: 20%; float:left" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>Contact Us</h2></strong>
   </div>
-  <div style="width: 80%; float:right"> <!-- RIGHT CONTENT -->
+  <div style="width: 80%; float:right" class="content"> <!-- RIGHT CONTENT -->
     Feel free to contact us for any reason, we won't bite!
     <br><a href = "mailto: omegabytten@gmail.com">Omegabytten@gmail.com</a>
   </div>
