--- a/Main/home.html
+++ b/Main/home.html
@@ -80,7 +80,7 @@
 </nav>
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
-<div class="center content">
+<div class="center">
   <div style="width: 20%; float:left" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
@@ -91,12 +91,12 @@
 <!-- RIGHT CONTENT This website and username refers to <b>Ethan de Villiers</b>.-->
 
 
-<div class="center content">
+<div class="center">
   <div style="width: 80%; float:left" class="content"> <!-- LEFT CONTENT -->
      Megabytten is constantly developing more and more complex tech solutions.
      From enjoyable Minecraft Mods, to Mobile Games, to Bioinformatician-targetted automation programs,
      we ultimately strive to revolutionise the field of medicine for researchers. One script at a time.
-     <br><br>To view our projects, use the <a style="color:#00FFF9" href="nav">navigation bar</a> at the top.
+     <br><br>To view our projects, use the <a style="color:#00FFF9" href="#nav">navigation bar</a> at the top.
      All of our software is open source and available for viewing on <a style="color:#00FFF9" href="https://github.com/MegaBytten">github</a>.
   </div>
   <div style="width: 20%; float:right" class="content"> <!-- RIGHT CONTENT -->
@@ -106,7 +106,7 @@
 
 
 
-<div class="center content">
+<div class="center">
   <div style="width: 20%; float:left" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>Contact Us</h2></strong>
   </div>
