--- a/Main/home.html
+++ b/Main/home.html
@@ -86,6 +86,7 @@
     Welcome to Megabytten: Evolving Tech Projects
   </div>
 </div>
+<br style="clear:both" />
 <!-- RIGHT CONTENT This website and username refers to <b>Ethan de Villiers</b>.-->
 
 
@@ -101,7 +102,7 @@
     <strong><h2>About</h2></strong>
   </div>
 </div>
-
+<br style="clear:both" />
 
 
 <div class="center">
