--- a/Main/home.html
+++ b/Main/home.html
@@ -51,7 +51,7 @@
 
     .content {
       background-color: #1B1B1B;
-      height: 200;
+      height: 200px;
       margin-top: 100px;
       display: inline;
     }
