--- a/Main/home.html
+++ b/Main/home.html
@@ -56,11 +56,19 @@
       display: inline;
     }
 
+    body{
+      padding-top: 0px;
+      padding-right: 40px;
+      padding-bottom: 5px;
+      padding-left: 40px;
+      background-color: #000000;
+    }
+
   </style>
 
 </head>
 
-<body style="background-color:#000000">
+<body>
 
 <header class="center">
   <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
@@ -79,7 +87,7 @@
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div class="center">
-  <div style="width: 20%; float:left" class="content"> <!-- LEFT CONTENT -->
+  <div style="width: 20%; float:left; border-right: solid white 2px;" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
   <div style="width: 80%; float:right" class="content"> <!-- RIGHT CONTENT -->
@@ -98,7 +106,7 @@
      <br><br>To view our projects, use the <a style="color:#00FFF9" href="#nav">navigation bar</a> at the top.
      All of our software is open source and available for viewing on <a style="color:#00FFF9" href="https://github.com/MegaBytten">github</a>.
   </div>
-  <div style="width: 20%; float:right" class="content"> <!-- RIGHT CONTENT -->
+  <div style="width: 20%; float:right; border-left: solid white 2px;" class="content"> <!-- RIGHT CONTENT -->
     <strong><h2>About</h2></strong>
   </div>
 </div>
@@ -106,7 +114,7 @@
 
 
 <div class="center">
-  <div style="width: 20%; float:left" class="content"> <!-- LEFT CONTENT -->
+  <div style="width: 20%; float:left; border-right: solid white 2px;" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>Contact Us</h2></strong>
   </div>
   <div style="width: 80%; float:right" class="content"> <!-- RIGHT CONTENT -->
