--- a/Main/home.html
+++ b/Main/home.html
@@ -84,6 +84,7 @@
   <a href="minecraft">Minecraft Projects</a>
   <a href="shortcut">Shortcut</a>
 </nav>
+<br style="clear:both" />
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div class="center">
