--- a/Main/home.html
+++ b/Main/home.html
@@ -84,11 +84,10 @@
   <a href="minecraft">Minecraft Projects</a>
   <a href="shortcut">Shortcut</a>
 </nav>
-<br style="clear:both" />
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div class="center">
-  <div style="width: 20%; float:left; border-right: solid white 2px;" class="content"> <!-- LEFT CONTENT -->
+  <div style="width: 20%; border-right: solid white 2px; float:left;" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
   <div style="width: 80%; float:right" class="content"> <!-- RIGHT CONTENT -->
