--- a/Main/home.html
+++ b/Main/home.html
@@ -87,7 +87,7 @@
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div class="center">
-  <div style="width: 20%; border-right: solid white 2px; float:left;" class="content"> <!-- LEFT CONTENT -->
+  <div style="width: 20%; float:left;" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
   <div style="width: 80%; float:right" class="content"> <!-- RIGHT CONTENT -->
