--- a/Main/home.html
+++ b/Main/home.html
@@ -86,11 +86,11 @@
 </nav>
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
-<div class="center">
-  <div style="width: 40%; border-right: solid white 2px; float:left;" class="content"> <!-- LEFT CONTENT -->
+<div class="center" style="height: 50px;">
+  <div style="width: 40%; border-right: solid white 2px; float:left; height: 50px;" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
-  <div style="width: 58%; float:right" class="content"> <!-- RIGHT CONTENT -->
+  <div style="width: 60%; float:right; height: 50px;" class="content"> <!-- RIGHT CONTENT -->
     Welcome to Megabytten: Evolving Tech Projects
   </div>
 </div>
@@ -99,7 +99,7 @@
 
 
 <div class="center">
-  <div style="width: 58%; float:left" class="content"> <!-- LEFT CONTENT -->
+  <div style="width: 60%; float:left" class="content"> <!-- LEFT CONTENT -->
      Megabytten is constantly developing more and more complex tech solutions.
      From enjoyable Minecraft Mods, to Mobile Games, to Bioinformatician-targetted automation programs,
      we ultimately strive to revolutionise the field of medicine for researchers. One script at a time.
@@ -117,7 +117,7 @@
   <div style="width: 40%; float:left; border-right: solid white 2px;" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>Contact Us</h2></strong>
   </div>
-  <div style="width: 58%; float:right" class="content"> <!-- RIGHT CONTENT -->
+  <div style="width: 60%; float:right" class="content"> <!-- RIGHT CONTENT -->
     Feel free to contact us for any reason, we won't bite!
     <br><a href = "mailto: omegabytten@gmail.com">Omegabytten@gmail.com</a>
   </div>
