--- a/Main/home.html
+++ b/Main/home.html
@@ -51,6 +51,7 @@
 
     .content {
       background-color: #1B1B1B;
+      box-sizing:border-box;
       height: 200px;
       margin-top: 100px;
       display: inline;
