--- a/Main/home.html
+++ b/Main/home.html
@@ -89,7 +89,7 @@
 
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div class="center" style="height: 100px;">
-  <div style="width: 40%; border-right: solid white 2px; float:left; height: 50px;" class="content"> <!-- LEFT CONTENT -->
+  <div style="width: 40%; border-right: solid white 2px; float:left; height: 100px;;" class="content"> <!-- LEFT CONTENT -->
      <strong><h2>MegaBytten</h2></strong>
   </div>
   <div style="width: 60%; float:right; height: 100px;" class="content"> <!-- RIGHT CONTENT -->
