Website aesthetic overhaul

--- a/EUTRCApp/verification-failure.html
+++ b/EUTRCApp/verification-failure.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MB Failed!</title>
+  <title>MB EUTRC Verif</title>
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
   <!-- This style section below defines CSS laws for HTML elements in document -->
@@ -45,8 +45,25 @@
     }
 
     img {
-    max-width: 100%;
-    max-height: 100%;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .content {
+      background-color: #1B1B1B;
+      box-sizing:border-box;
+      height: 200px;
+      margin-top: 100px;
+      display: inline;
+      padding: 15px;
+    }
+
+    body{
+      padding-top: 0px;
+      padding-right: 40px;
+      padding-bottom: 5px;
+      padding-left: 40px;
+      background-color: #000000;
     }
 
   </style>
@@ -55,21 +72,27 @@
 
 <body>
 
-<div class="center">
-  <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions">
+<header class="center">
+  <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
   <!-- <script src="js/scripts.js"></script> -->
-  <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
-  <div class="topnav">
-    <a href="/home">Home</a>
-    <a href="/eutrcapp">EUTRC App</a>
-    <a href="/minecraft">Minecraft Projects</a>
-    <a href="/about">About</a>
-  </div>
+  <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
+  <hr> <h1><font color="white">EUTRC App Verification</h1> <hr>
+</header>
+
+<div class="topnav">
+  <a href="/home">Home</a>
+  <a href="/eutrcapp">EUTRC App</a>
+  <a href="/minecraft">Minecraft Projects</a>
+  <a href="/about">About</a>
+</div>
+
+<font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
+<div>
   <hr>
   <h2>Whoops!</h2>
   <br>
   <p>Email Address or Password Incorrect! Please <a href='/eutrcapp'>Go Back</a> and try again.
   <br>
-  <h5>Warning:
+  <h3>Warning:
   <p>Ensure you have registered your email and password on the EUTRCApp before attempting a verification email!
 </div>
