--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MB EUTRC/Home</title>
+  <title>Megabytten.org</title>
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
   <!-- This style section below defines CSS laws for HTML elements in document -->
@@ -45,8 +45,25 @@
     }
 
     img {
-    max-width: 100%;
-    max-height: 100%;
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    .content {
+      background-color: #1B1B1B;
+      box-sizing:border-box;
+      height: 200px;
+      margin-top: 100px;
+      display: inline;
+      padding: 15px;
+    }
+
+    body{
+      padding-top: 0px;
+      padding-right: 40px;
+      padding-bottom: 5px;
+      padding-left: 40px;
+      background-color: #000000;
     }
 
   </style>
@@ -55,16 +72,24 @@
 
 <body>
 
-<div class="center">
-  <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions">
+<header class="center">
+  <img src="/Main/imgs/mbproductionsbanner.png" alt="MegaByttenProductions"> </img>
   <!-- <script src="js/scripts.js"></script> -->
-  <!-- <h1 text-align='center'>MegaBytten.org</h1>  -->
-  <div class="topnav">
-    <a href="/home">Home</a>
-    <a class="active" href="eutrcapp">EUTRC App</a>
-    <a href="/minecraft">Minecraft Projects</a>
-    <a href="/about">About</a>
-  </div>
+  <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
+  <hr> <h1><font color="white">EUTRC App</h1> <hr>
+    
+</header>
+<div>
+  <nav id="nav" class="topnav">
+    <a class="active" href="home">Home</a>
+    <a href="eutrcapp">EUTRC App</a>
+    <a href="minecraft">Minecraft Projects</a>
+    <a href="shortcut">Shortcut</a>
+  </nav>
+</div>
+
+<font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
+<div>
   <hr>
   <h2>EUTRC App</h2>
   <br>
