--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -77,12 +77,12 @@
   <!-- <script src="js/scripts.js"></script> -->
   <!-- <h1 text-align='center'>MegaBytten.org</h1> -->
   <hr> <h1><font color="white">EUTRC App</h1> <hr>
-    
+
 </header>
 <div>
   <nav id="nav" class="topnav">
-    <a class="active" href="home">Home</a>
-    <a href="eutrcapp">EUTRC App</a>
+    <a href="home">Home</a>
+    <a class="active" href="eutrcapp">EUTRC App</a>
     <a href="minecraft">Minecraft Projects</a>
     <a href="shortcut">Shortcut</a>
   </nav>
@@ -91,12 +91,11 @@
 <font color="white"> <!-- Unsure if this can work! hopefully applies to all divs -->
 <div>
   <hr>
-  <h2>EUTRC App</h2>
-  <br>
+  <!-- Should be app related content here! -->
 </div>
 
 <div class='center'>
-  <h3>EUTRC App Verification</h3>
+  <h2>EUTRC App Verification</h2>
   <hr>
   <form onsubmit="return checkEmail(event)" method='post' action="/eutrcapp/verification">
     <input type="email" name="email" placeholder="@exeter.ac.uk" id="email" required>
