--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Megabytten.org</title>
+  <link rel="icon" type="image/png" href="favicon.png" />
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
   <!-- This style section below defines CSS laws for HTML elements in document -->
@@ -96,7 +97,7 @@
 
 <div class='center'>
   <h2>EUTRC App Verification</h2>
-  <hr>
+  <br>
   <form onsubmit="return checkEmail(event)" method='post' action="/eutrcapp/verification">
     <input type="email" name="email" placeholder="@exeter.ac.uk" id="email" required>
     <input type='password' name='password' placeholder="******" id="password" required>
