--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Megabytten.org</title>
-  <link rel="icon" type="image/png" href="/faviconlogo.png" />
-  <link rel="shortcut icon" type="image/png" href="/faviconlogo.png" />
+  <!-- <link rel="icon" type="image/png" href="/faviconlogo.png" />
+  <link rel="shortcut icon" type="image/png" href="/faviconlogo.png" /> -->
   <!--  <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
 
   <!-- This style section below defines CSS laws for HTML elements in document -->
