Structural overhaul and middleware addition

--- a/EUTRCApp/main.html
+++ b/EUTRCApp/main.html
@@ -99,7 +99,7 @@
 <div class='center'>
   <h2>EUTRC App Verification</h2>
   <br>
-  <form onsubmit="return checkEmail(event)" method='post' action="/eutrcapp/verification">
+  <form onsubmit="return checkEmail(event)" method='post' action="/eutrcapp/verfbot">
     <input type="email" name="email" placeholder="@exeter.ac.uk" id="email" required>
     <input type='password' name='password' placeholder="******" id="password" required>
     <input type="submit" value="Verify Email" />
