public middleware for serving static files

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>EUTRC App</title>
-        <link rel="stylesheet" href="/common styles/header.css">
+        <link rel="stylesheet" href="/public/common styles/header.css">
 
         <style>
 
