Static update  - moved website images to static "public" folder  - adjusted all href/src links  - reintroduced static express middleware

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -80,7 +80,7 @@
 
                 <div class="left-header-section"> 
                     <a href="/home">
-                        <img class="mb-logo" src="/website images/header/mb_logo.png"> 
+                        <img class="mb-logo" src="/public/website images/header/mb_logo.png"> 
                     </a>
                     
                 </div>
@@ -104,7 +104,7 @@
 
         <div class="app-gallery">
             <a href="ttt.app">
-                <img class="app-logo" src="/website images/eutrc app/playstoreicon.png" alt="The EUTRC App Logo">
+                <img class="app-logo" src="/public/website images/eutrc app/playstoreicon.png" alt="The EUTRC App Logo">
             </a>
             <a class="webapp-redirect-text" href="ttt.app">
                 Click the logo for the webapp
@@ -131,9 +131,9 @@
             </h2>
 
             <div class="screenshots-row">
-                <img class="screenshot-img" src="/website images/eutrc app/homepage_screenshot.png" alt="screenshot from EUTRC App displaying the home page containing the upcoming trainings">
-                <img class="screenshot-img" src="/website images/eutrc app/eventspage_screenshot.png" alt="screenshot from EUTRC App displaying the events calendar">
-                <img class="screenshot-img" src="/website images/eutrc app/eventspage_with_training_screenshot.png" alt="screenshot from EUTRC App displaying a training viewed from the events calendar">
+                <img class="screenshot-img" src="/public/website images/eutrc app/homepage_screenshot.png" alt="screenshot from EUTRC App displaying the home page containing the upcoming trainings">
+                <img class="screenshot-img" src="/public/website images/eutrc app/eventspage_screenshot.png" alt="screenshot from EUTRC App displaying the events calendar">
+                <img class="screenshot-img" src="/public/website images/eutrc app/eventspage_with_training_screenshot.png" alt="screenshot from EUTRC App displaying a training viewed from the events calendar">
             </div>
         </div>
         
