faivicon in public

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -80,7 +80,7 @@
 
                 <div class="left-header-section"> 
                     <a href="/home">
-                        <img class="mb-logo" src="/public/website images/header/mb_logo.png"> 
+                        <img class="mb-logo" src="/public/favicion.ico"> 
                     </a>
                     
                 </div>
