Favicon.io middleware update

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -109,6 +109,10 @@
             <a class="webapp-redirect-text" href="ttt.app">
                 Click the logo for the webapp
             </a> 
+            <a href="">
+                
+            </a>
+
         </div>
 
         <div class="about-section">
