--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -80,7 +80,7 @@
 
                 <div class="left-header-section"> 
                     <a href="/home">
-                        <img class="mb-logo" src="/favicion.ico"> 
+                        <img class="mb-logo" src="/favicon.ico"> 
                     </a>
                     
                 </div>
@@ -110,7 +110,7 @@
                 Click the logo for the webapp
             </a> 
             <a href="">
-                
+
             </a>
 
         </div>
