apk update and final aab finishings

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -91,19 +91,15 @@
 
             .downloads-section {
                 margin-bottom: 80px;
+                margin-left: 20px;
             }
 
             .grid-downloads {
                 display: grid;
                 grid-template-columns: 60% 40%;
-
-                margin-left: 20px;
                 margin-right: 20px;
                 row-gap: 20px;
-
-                text-align: center;
-                justify-content: center;
-                align-items: center;
+                margin-bottom: 80px;
             }
 
             .download-button {
@@ -256,6 +252,16 @@
                 
             </div>
 
+
+            <h3 style="margin-bottom: 0px;">
+                Version History (.apk) 
+            </h3>
+            <p style="margin-top:8px; margin-bottom: 50px;">
+                .apk, on the other hand, stands for "Android Package" and is an alternative
+                way to distribute android applications.
+            </p>
+
+            <text style="color:rgb(255, 79, 85);">No current APKs available.</text>
            
 
         </div>
