--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -292,15 +292,15 @@
                 <img 
                     src="mb_github_icon.png" 
                     alt="MegaBytten's Github profile picture"
-                    style="width;:200px">
+                    style="width:200px">
                 <img 
                     src="mb_logo.png" 
                     alt="MegaBytten productions Logo"
-                    style="width;:200px">
+                    style="width:200px">
                 <img 
                     src="TTT_feature_graphic.png" 
                     alt="The Feature Graphic of Touch Training Tracker"
-                    style="width;:200px">
+                    style="width:200px">
             </div>
         </footer>
 
