--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -125,9 +125,18 @@
             }
 
             .footer-section {
+                margin-top: 15px;
                 display:flex;
                 justify-content: space-evenly;
             }
+
+            .footer-github-icon,
+            .footer-logo-icon,
+            .footer-ttt-icon {
+                width:80px;
+            }
+
+             
 
             
         </style>
@@ -292,15 +301,15 @@
                 <img 
                     src="mb_github_icon.png" 
                     alt="MegaBytten's Github profile picture"
-                    style="width:200px">
+                    class="footer-github-icon">
                 <img 
                     src="mb_logo.png" 
                     alt="MegaBytten productions Logo"
-                    style="width:200px">
+                    class="footer-logo-icon">
                 <img 
                     src="TTT_feature_graphic.png" 
                     alt="The Feature Graphic of Touch Training Tracker"
-                    style="width:200px">
+                    class="footer-ttt-icon">
             </div>
         </footer>
 
