--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -307,7 +307,7 @@
                     alt="MegaBytten productions Logo"
                     class="footer-logo-icon">
                 <img 
-                    src="TTT_feature_graphic.png" 
+                    src="/website images/eutrc app/playstoreicon.png" 
                     alt="The Feature Graphic of Touch Training Tracker"
                     class="footer-ttt-icon">
             </div>
