--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -136,6 +136,10 @@
                 width:80px;
             }
 
+            .footer-ttt-icon {
+                border-radius: 20px;
+            }
+
              
 
             
