--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -123,10 +123,12 @@
                 text-align: center;
             }
 
-            .footer-section {
+            .footer-icon-section {
                 margin-top: 15px;
+                margin-bottom: 15px;
                 display:flex;
                 justify-content: space-evenly;
+
             }
 
             .footer-github-icon,
@@ -300,7 +302,7 @@
                 MegaBytten.org
             </p>
 
-            <div class="footer-section">
+            <div class="footer-icon-section">
                 <img 
                     src="mb_github_icon.png" 
                     alt="MegaBytten's Github profile picture"
