--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -114,6 +114,7 @@
 
             .footer {
                 background-color:#222222;
+                padding-bottom: 20px;
             }
 
             .footer-site-title {
@@ -125,7 +126,7 @@
 
             .footer-icon-section {
                 margin-top: 15px;
-                margin-bottom: 15px;
+                
                 display:flex;
                 justify-content: space-evenly;
 
