even downloads grid

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -101,6 +101,7 @@
                 row-gap: 20px;
                 margin-bottom: 80px;
                 align-items: center;
+                justify-content: space-evenly;
             }
 
             .download-button {
