_blank target github icon

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -328,7 +328,7 @@
             </p>
 
             <div class="footer-icon-section">
-                <a href="https://github.com/MegaBytten">
+                <a href="https://github.com/MegaBytten" target="_blank">
                     <img 
                     src="mb_github_icon.png" 
                     alt="MegaBytten's Github profile picture"
