footer image filepaths fix

--- a/EUTRCApp/pages/eutrcapp.html
+++ b/EUTRCApp/pages/eutrcapp.html
@@ -181,14 +181,14 @@
             <div class="footer-icon-section">
                 <a href="https://github.com/MegaBytten" target="_blank">
                     <img 
-                    src="mb_github_icon.png" 
+                    src="/mb_github_icon.png" 
                     alt="MegaBytten's Github profile picture"
                     class="footer-github-icon">
                 </a>
                
                 <a href="home">
                     <img 
-                    src="mb_logo.png" 
+                    src="/mb_logo.png" 
                     alt="MegaBytten productions Logo"
                     class="footer-logo-icon">
                 </a>
