--- a/public/home/home.html
+++ b/public/home/home.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="/common styles/header.css">
         <link rel="stylesheet" href="/common styles/footer.css">
     </head>
-    <body>
+    <body style="background-color: #121212;">
         <header>
             <div class="header">
 
@@ -27,6 +27,10 @@
             </div>
             
         </header>
+
+        <h1 class="title">
+            EUTRC App
+        </h1>
 
         <footer class="footer">
             <p class="footer-site-title">
