--- a/public/eutrcapp/eutrcapp.html
+++ b/public/eutrcapp/eutrcapp.html
@@ -188,12 +188,12 @@
                
                 <a href="home">
                     <img 
-                    src="/mb_logo.png" 
+                    src="/website images/mb_logo.png" 
                     alt="MegaBytten productions Logo"
                     class="footer-logo-icon">
                 </a>
                 
-                <a href="/eutrcapp">
+                <a href="/website images/eutrcapp">
                     <img 
                     src="/website images/eutrc app/playstoreicon.png" 
                     alt="The Feature Graphic of Touch Training Tracker"
