/home profile update

--- a/public/eutrcapp/eutrcapp.html
+++ b/public/eutrcapp/eutrcapp.html
@@ -181,7 +181,7 @@
             <div class="footer-icon-section">
                 <a href="https://github.com/MegaBytten" target="_blank">
                     <img 
-                    src="/mb_github_icon.png" 
+                    src="/website images/mb_github_icon.png" 
                     alt="MegaBytten's Github profile picture"
                     class="footer-github-icon">
                 </a>
@@ -193,7 +193,7 @@
                     class="footer-logo-icon">
                 </a>
                 
-                <a href="/website images/eutrcapp">
+                <a href="/eutrcapp">
                     <img 
                     src="/website images/eutrc app/playstoreicon.png" 
                     alt="The Feature Graphic of Touch Training Tracker"
