--- a/public/home/home.html
+++ b/public/home/home.html
@@ -8,19 +8,22 @@
         <style>
             .title-section{
                 display: grid;
-                grid-template-columns: 40% 60%;
+                grid-template-columns: 50% 50%;
+                column-gap: 40px;
                 align-items: center;
                 justify-content: center;
             }
 
             .title-profile-pic {
                 max-width: 400px;
+                width: fit-content;
             }
 
             h1 {
                 color: antiquewhite;
                 text-align: center;
                 letter-spacing: 2px;
+                width: fit-content;
             }
 
         </style>
@@ -73,7 +76,7 @@
             <div class="footer-icon-section">
                 <a href="https://github.com/MegaBytten" target="_blank">
                     <img 
-                    src="/mb_github_icon.png" 
+                    src="/website images/mb_github_icon.png" 
                     alt="MegaBytten's Github profile picture"
                     class="footer-github-icon">
                 </a>
@@ -85,7 +88,7 @@
                     class="footer-logo-icon">
                 </a>
                 
-                <a href="/website images/eutrcapp">
+                <a href="/eutrcapp">
                     <img 
                     src="/website images/eutrc app/playstoreicon.png" 
                     alt="The Feature Graphic of Touch Training Tracker"
