center profile pic?

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -14,12 +14,18 @@
                 justify-content: center;
             }
 
+            .profile-pic-div {
+                display:flex;
+                justify-content: center;
+            }
+
             .title-profile-pic {
-                max-width: 400px;
-                width: fit-content;
+                max-width: 200px;
+                margin-right: 0px;
             }
 
             h1 {
+                margin-left: 0px;
                 color: antiquewhite;
                 text-align: center;
                 letter-spacing: 2px;
@@ -53,11 +59,15 @@
         </header>
 
         <div class="title-section">
-            <img 
+            <div class="profile-pic-div">
+                <img 
                 class="title-profile-pic"
                 src="/website images/home/mb_profile_pic.png" 
                 alt="A profile photo of MegaBytten, also known as Ethan de Villiers"
             >
+            </div>
+
+            
             <h1>
                 <strong>
                     Jr.<br>
