--- a/public/home/home.html
+++ b/public/home/home.html
@@ -15,12 +15,13 @@
             }
 
             .profile-pic-div {
-                display:flex;
-                justify-content: center;
+                /* display:flex;
+                justify-content: center; */
             }
 
             .title-profile-pic {
                 max-width: 350px;
+                
                 margin-right: 0px;
             }
 
