profile touch ups

--- a/public/home/home.html
+++ b/public/home/home.html
@@ -12,25 +12,35 @@
                 column-gap: 40px;
                 align-items: center;
                 justify-content: center;
+                padding-top: 50px;
+                padding-bottom: 50px;
             }
 
             .profile-pic-div {
-                /* display:flex;
-                justify-content: center; */
+                display:flex;
+                justify-content: center;
             }
 
             .title-profile-pic {
                 max-width: 350px;
-                
                 margin-right: 0px;
             }
 
             h1 {
                 margin-left: 0px;
                 color: antiquewhite;
-                text-align: center;
+                text-align: left;
+                font-size: xx-large;
                 letter-spacing: 2px;
                 width: fit-content;
+            }
+
+            .title-text-2 {
+                margin-left: 5px;
+            }
+
+            .title-text-3 {
+                margin-left: 10px;
             }
 
         </style>
@@ -72,8 +82,8 @@
             <h1>
                 <strong>
                     Jr.<br>
-                    Solutions<br>
-                    Architect
+                    <span class="title-text-2">Solutions<br></span>
+                    <span class="title-text-3">Architect<br></span>
                 </strong>
 
             </h1>
